--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ node_modules
 package-lock.json
 .env
 mock.json
-/static/users/*.json
+/JSON/users/*.json
+/JSON/replacements/*.json
+/JSON/subdivisions/*.json
