--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "moment": "^2.29.1",
+    "object-hash": "^2.2.0",
     "swagger-ui-express": "^4.1.6"
   }
 }
