--- a/package.json
+++ b/package.json
@@ -2,25 +2,22 @@
   "name": "syncrest1c",
   "version": "1.0.0",
   "description": "Сервис для получения данных из 1С.",
+  "license": "ISC",
+  "author": "Dmitriy Dzyuman, ATMRussia",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
     "add": "node scripts/ip.js add",
     "delete": "node scripts/ip.js delete",
-    "test": "jest",
     "dev": "nodemon app.js",
     "idx": "node scripts/makeIndex.js",
-    "prune": "npm prune --production"
-  },
-  "author": "Dmitriy Dzyuman, ATMRussia",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.12",
-    "jest": "^27.2.4"
+    "prune": "npm prune --production",
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
     "MinimalMongodb": "git+https://git.ans.aero/Libs/MinimalMongodb.git",
     "PrepareWords": "git+https://git.ans.aero/Libs/PrepareWords.git",
+    "clogsjs": "^1.0.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -29,5 +26,9 @@
     "object-hash": "^2.2.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
+  },
+  "devDependencies": {
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.12"
   }
 }
